# pxp-rs

./: Cargo.toml
occlum/: Occlum.json  pxp.yaml
rlib/: Cargo.toml  build.rs
rlib/src/: buddy_alloc.rs  i915.rs  lib.rs  memory.rs  sgx_no_std.rs
slib/: Cargo.toml  README.md  build.rs
