[package]
name = "i915s"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
path = "../rlib/src/lib.rs"

[dependencies]
cfg-if = "1.0.0"
log = "0.4"
ctor = "0.1"
spin = "0.5.2"
sgx_alloc = { path = "../../rust-sgx-sdk/sgx_alloc" }
sgx_types = { path = "../../rust-sgx-sdk/sgx_types" }
